--- a/dash_board/src/criterialist/CriteriaList.css
+++ b/dash_board/src/criterialist/CriteriaList.css
@@ -4,7 +4,7 @@
     margin: 20px auto;
     padding: 20px;
     max-width: 800px;
-    background-color: #f9f9f9;
+    background-color: white;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
@@ -56,7 +56,7 @@
   }
   
   .teacher--table th {
-    background-color: #4CAF50;
+    background-color: #05445E;
     color: white;
   }
   
