--- a/dash_board/src/studentslist/StudentsList.css
+++ b/dash_board/src/studentslist/StudentsList.css
@@ -1,76 +1,3 @@
-/* .list--header
-{
-    display: flex;
-    margin: 3rem 0;
-    justify-content: space-between;
-}
-
-.list--header h2
-{
-    color: #526d82;
-}
-
-.list--header select
-{
-border-radius: 10px;
-border: none;
-padding: 8px 12px;
-border: 1px solid #dde6ed;
-color: #526d82;
-}
-
-
-.list--container
-{
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-}
-
-.list
-{
-    display: flex;
-    padding-right: 10px;
-    align-items: center;
-    justify-content: space-between;
-    transition: 0.3s ease-in-out;
-}
-
-.teacher--detail
-{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    color: #526d82;
-
-}
-
-.teacher--detail img
-{
-    width: 50px;
-    background: #dde6ed;
-    border-radius: 50%;
-}
-.list:hover
-{
-    background: #dde6ed;
-    border-radius: 10px;
-}
-
-.spancourse
-{
-    margin-left: 100px;
-    font-size: 20px;
-    font-weight: 20px;
-}
-
-.spanother
-{
-    margin-left: 100px;
-    font-size: 20px;
-    font-weight: 20px;
-} */
-
 
 .teacher--list {
     width: 100%;
@@ -122,6 +49,12 @@ color: #526d82;
     cursor: pointer;
     border-radius: 4px;
     font-size: 14px;
+    /* Add this to your CSS file for testing */
+
+  pointer-events: auto; /* Ensure the button can be clicked */
+  z-index: 10; /* Ensure the button is above other elements */
+
+
   }
   
   button:hover {
