frontend code added

--- a/LastPerformance/src/components/TeachersPage/TeachersList.css
+++ b/LastPerformance/src/components/TeachersPage/TeachersList.css
@@ -26,6 +26,7 @@ border-radius: 10px;
     align-items: center;
     margin-bottom: 20px;
     padding: 10px;
+    background-color: white;
     border-radius: 8px;
     
 
