--- a/dash_board/src/styles/Second Semister.css
+++ b/dash_board/src/styles/Second Semister.css
@@ -1,34 +1,28 @@
-.list--header
-{
+#list-header {
     display: flex;
     margin: 3rem 0;
     justify-content: space-between;
 }
 
-.list--header h2
-{
+#list-header h2 {
     color: #526d82;
 }
 
-.list--header select
-{
-border-radius: 10px;
-border: none;
-padding: 8px 12px;
-border: 1px solid #dde6ed;
-color: #526d82;
+#list-header select {
+    border-radius: 10px;
+    border: none;
+    padding: 8px 12px;
+    border: 1px solid #dde6ed;
+    color: #526d82;
 }
 
-
-.list--container
-{
+#list-container {
     display: flex;
     flex-direction: column;
     gap: 15px;
 }
 
-.list
-{
+#list {
     display: flex;
     padding-right: 10px;
     align-items: center;
@@ -37,36 +31,31 @@ color: #526d82;
     gap: 20px;
 }
 
-.teacher--detail
-{
+#teacher-detail {
     display: flex;
     align-items: center;
     gap: 20px;
     color: #526d82;
-
 }
 
-.teacher--detail img
-{
+#teacher-detail img {
     width: 50px;
     background: #dde6ed;
     border-radius: 50%;
 }
-.list:hover
-{
+
+#list:hover {
     background: #dde6ed;
     border-radius: 10px;
 }
 
-.spancourse
-{
+#spancourse {
     margin-left: 20px;
     font-size: 20px;
     font-weight: normal;
 }
 
-.spanother
-{
+#spanother {
     margin-left: 100px;
     font-size: 20px;
     font-weight: 20px;
