--- a/dash_board/src/studentslist/StudentsList.css
+++ b/dash_board/src/studentslist/StudentsList.css
@@ -33,7 +33,7 @@
 }
 
 .teacher--table tbody tr:hover {
-  background-color: #f0f0f0;
+  background-color: #463e3e;
 }
 
 .teacher--table input[type="date"] {
