--- a/LastPerformance/src/components/DeptResult/ThirdDetail.css
+++ b/LastPerformance/src/components/DeptResult/ThirdDetail.css
@@ -13,9 +13,9 @@
     margin-top: 100px;
   }
 .containerr {
-    display: flex;
+    display: flex !important;
     flex-wrap: wrap;
-    margin-top: 30px;
+    margin-top: 150px;
     gap: 30px;
   }
 
@@ -30,6 +30,7 @@
   .column h2 {
     margin-top: 0; /* Remove top margin */
     margin-bottom: 10px;
+    margin-left: 50px;
   }
   
   .column p {
