--- a/LastPerformance/src/components/HRM/TeachersList.css
+++ b/LastPerformance/src/components/HRM/TeachersList.css
@@ -1,3 +1,4 @@
+/* Container for the whole list */
 .teacher--listB {
   width: 100%;
   margin: 0 auto;
@@ -5,12 +6,14 @@
   font-family: Arial, sans-serif;
 }
 
+/* Flex container for header */
 .bothh {
   display: flex;
   gap: 20px;
   flex-wrap: wrap;
 }
 
+/* General button styles */
 .bothh2 button {
   width: 100px;
   height: 50px;
@@ -18,6 +21,7 @@
   border-radius: 10px;
 }
 
+/* Header styles */
 .list--headerB h2 {
   margin: 0;
   font-size: 24px;
@@ -34,12 +38,14 @@
   color: #05445E;
 }
 
+/* Container styles */
 .list--containerB button {
   width: 50%;
   margin: 0 auto;  /* Centers the container horizontally */
   overflow-x: auto;
 }
 
+/* Table styles */
 table {
   width: 100%;
   border-collapse: collapse;
@@ -72,6 +78,7 @@ tbody tr:hover {
   color: white;
 }
 
+/* Media queries for responsiveness */
 @media (max-width: 1024px) {
   .bothh {
       flex-direction: column;
