--- a/LastPerformance/src/components/TeachersPage/ThirdDetail.css
+++ b/LastPerformance/src/components/TeachersPage/ThirdDetail.css
@@ -10,10 +10,10 @@
     text-align: center;
     color:  #1b2328;
     font-size: 30px; 
-    margin-top: 100px;
+    margin-top: 10px;
   }
 .containerr {
-    display: flex;
+    display: flex !important;
     flex-wrap: wrap;
     margin-top: 30px;
     gap: 30px;
